tests/ui/nested.stderr
error[E0727]: `async` generators are not yet supported
  --> $DIR/nested.rs:17:13
   |
17 |             yield i * i; //~ ERROR `async` generators are not yet supported [E0727]
   |             ^^^^^^^^^^^
